fix dark mode problem

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -1,7 +1,7 @@
 .dark,
 .dark * {
 	$dark_text_color: #f6f6f6;
-	$dark_link_color: #4da3ff;
+	$dark_link_color: #f6f6f6;  // #4da3ff
 	background-color: #171717;
 	color: $dark_text_color;
 	border-color: #e6e6e6;
@@ -11,6 +11,11 @@
 	}
 
 	#posts-label {
+		color: $dark_text_color;
+		border-bottom: 1px solid #272727;
+	}
+	
+	#posts-label2 {
 		color: $dark_text_color;
 		border-bottom: 1px solid #272727;
 	}
